--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -63,7 +63,6 @@ sil:
                     updated_at: Mis à jour le
                 help:
                     field_to: 'Expéditeurs séparés par « ; » (ex: user1@test.com;user2@test.com)'
-
             show:
                 label:
                     bcc: Copie cachée
@@ -76,6 +75,16 @@ sil:
                     updated_at: Mis à jour le
             error:
                 send_email_error: 'Erreur lors de l''envoi de l''email'
+            export:
+                label:
+                    field_from: De
+                    field_to: À
+                    field_subject: Sujet
+                    field_cc: Copie
+                    field_bcc: Copie cachée
+                    text_content: Contenu
+                    created_at: Créé le
+                    updated_at: Mise à jour le
 
 'Email': 'Email'
 'Email List': 'Liste Emails'
